--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <style>
       * {
         margin: 0;
         padding: 0;
+        font-family: "Karla", sans-serif;
       }
     </style>
 
